@@ -127,6 +127,16 @@ class PluginsModelPlugin extends JModelForm
 			$registry = new JRegistry;
 			$registry->loadJSON($table->params);
 			$this->_cache[$pk]->params = $registry->toArray();
+			
+			// Get the plugin XML.
+			$client	= JApplicationHelper::getClientInfo($table->client_id);
+			$path	= JPath::clean($client->path.'/plugins/'.$table->folder.'/'.$table->element.'/'.$table->element.'.xml');
+
+			if (file_exists($path)) {
+				$this->_cache[$pk]->xml = &JFactory::getXML($path);
+			} else {
+				$this->_cache[$pk]->xml = null;
+			}
 		}
 
 		return $this->_cache[$pk];
