@@ -28,6 +28,12 @@ $ -> Language fix or change
 ! -> Note
 
 18-Jan-2010 Jean-Marie Simonet
+^ Added Description metadata in plugins edit screen
+
+18-Jan-2010 Hannes Papenberg
+# Changed default namespace of JRegistry from 'default' to '_default' - Thanks Robert Deutz!
+
+18-Jan-2010 Jean-Marie Simonet
 # Fixed typos in language and router
 
 18-Jan-2010 Jean-Marie Simonet
